@@ -1,4 +1,4 @@
-  # cat=basic/enable; type=string; label=IP address of the client browser: Enter your current IP address ###IP###, if you want to debug this client's actions. (You see here only a marker if the TYPO3 extension patchem has been installed.)
+  # cat=basic/enable; type=string; label=IP address of the client browser: Enter your current IP address ###IP###, if you want to debug this client's actions. (You see here only a marker if the TYPO3 extension patchem has been installed.) This will override the SYS devIPMask settings from the Install Tool.
 IPADDRESS = ::1
   # cat=basic/enable; type=boolean; label=debugBegin required: Set this if you only want to have a debug output between the debugBegin and debugEnd. The first debugBegin will initialize the debug.
 DEBUGBEGIN = 0
@@ -22,6 +22,8 @@ DEBUGFILEMODE = wb
 TRACEFIELDS = file, line, function
   # cat=basic/conf; type=int; label= Depth of the trace: number of the functions to be included in the backtrace.
 TRACEDEPTH = 5
+  # cat=basic/conf; type=int; label= Depth of the trace for exceptions: number of the functions to be included in the backtrace for an exception.
+TRACEDEPTH_EXCEPTION = 12
   # cat=basic/conf; type=boolean; label= HTML: generate a HTML output file.
 HTML = 1
   # cat=basic/conf; type=int; label=Level: maximum recursion level for debugging into arrays and objects
@@ -36,6 +38,8 @@ CSSFILE = fhdebug.css
 DEVLOG = 0
   # cat=basic/conf; type=boolean; label= SysLog: Allow to write informations about problems which go to the System Logfile (sys_log) even if debugBegin has not been set.
 SYSLOG = 0
+  # cat=basic/conf; type=string; label= Exclude SysLog: Regular expressions of problems which are omitted from going to the System Logfile (sys_log).
+SYSLOG_EXCLUDE = no_cache
   # cat=basic/conf; type=boolean; label= Oops an error occured: Debug the exception message of a TYPO3 error "Oops, an error occurred! Code:"
 OOPS_AN_ERROR_OCCURRED = 1
   # cat=basic/conf; type=boolean; label= proxy: Determine the clients ip by the HTTP_X_FORWARDED_FOR server variable which is set if a proxy forwarded the ip address.
