@@ -1,58 +1,60 @@
 <?php
 
 if (!defined ('TYPO3_MODE')) {
-	die('Access denied.');
+    die('Access denied.');
 }
+
+define('FH_DEBUG_EXT', $_EXTKEY);
 
 $_EXTCONF = unserialize($_EXTCONF);    // unserializing the configuration so we can use it here:
 
 if (
-	isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY]) &&
-	is_array($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY])
+    isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY]) &&
+    is_array($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY])
 ) {
-	$tmpArray = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY];
+    $tmpArray = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY];
 } else {
-	unset($tmpArray);
+    unset($tmpArray);
 }
 
 if (isset($_EXTCONF) && is_array($_EXTCONF)) {
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY] = $_EXTCONF;
-	if (isset($tmpArray) && is_array($tmpArray)) {
-		$GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY] = array_merge($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY], $tmpArray);
-	}
+    $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY] = $_EXTCONF;
+    if (isset($tmpArray) && is_array($tmpArray)) {
+        $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY] = array_merge($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY], $tmpArray);
+    }
 }
 
 if (
-	defined('TYPO3_version') &&
-	version_compare(TYPO3_version, '6.0.0', '>=') &&
-	isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY]) &&
-	is_array($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY])
+    defined('TYPO3_version') &&
+    version_compare(TYPO3_version, '6.0.0', '>=') &&
+    isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY]) &&
+    is_array($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY])
 ) {
-	$class = '\JambageCom\FhDebug\Utility\DebugFunctions';
-	if (
-		!isset($GLOBALS['error']) ||
-		!is_object($GLOBALS['error']) ||
-		!($GLOBALS['error'] instanceof $class)
-	) {
+    $class = '\\JambageCom\\FhDebug\\Utility\\DebugFunctions';
+    if (
+        !isset($GLOBALS['error']) ||
+        !is_object($GLOBALS['error']) ||
+        !($GLOBALS['error'] instanceof $class)
+    ) {
         $newExtConf = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$_EXTKEY];
-		$myDebugObject = new \JambageCom\FhDebug\Utility\DebugFunctions($newExtConf);
-		$bIpIsAllowed = false;
-		$ipAdress = \JambageCom\FhDebug\Utility\DebugFunctions::initIpAddress($bIpIsAllowed);
-		$bModeIsAllowed = \JambageCom\FhDebug\Utility\DebugFunctions::verifyTypo3Mode(TYPO3_MODE);
+        $myDebugObject = new \JambageCom\FhDebug\Utility\DebugFunctions($newExtConf);
+        $bIpIsAllowed = false;
+        $ipAdress = \JambageCom\FhDebug\Utility\DebugFunctions::initIpAddress($bIpIsAllowed);
+        $bModeIsAllowed = \JambageCom\FhDebug\Utility\DebugFunctions::verifyTypo3Mode(TYPO3_MODE);
 
-		if (
-			$bModeIsAllowed &&
-			(
-				$bIpIsAllowed ||
-				\TYPO3\CMS\Core\Utility\GeneralUtility::cmpIP($ipAdress, '127.0.0.1') ||
-				TYPO3_MODE == 'FE' && $newExtConf['FEUSERNAMES']
-			)
-		) {
-			\JambageCom\FhDebug\Utility\DebugFunctions::init($ipAdress);
-		}
+        if (
+            $bModeIsAllowed &&
+            (
+                $bIpIsAllowed ||
+                \TYPO3\CMS\Core\Utility\GeneralUtility::cmpIP($ipAdress, '127.0.0.1') ||
+                TYPO3_MODE == 'FE' && $newExtConf['FEUSERNAMES']
+            )
+        ) {
+            \JambageCom\FhDebug\Utility\DebugFunctions::init($ipAdress);
+        }
 
-		// the error object must always be set in order to show the debug output or to disable it
-		$GLOBALS['error'] = $myDebugObject;
+        // the error object must always be set in order to show the debug output or to disable it
+        $GLOBALS['error'] = $myDebugObject;
 
 // 		if (TYPO3_MODE === 'BE') {
 // 			$signalSlotDispatcher =
@@ -65,25 +67,25 @@ if (
 // 			);
 // 		}
 
-		if ($newExtConf['DEVLOG']) {
-			$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['devLog'][$_EXTKEY] = 'JambageCom\\FhDebug\\Hooks\\CoreHooks->devLog';
-		}
+        if ($newExtConf['DEVLOG']) {
+            $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['devLog'][$_EXTKEY] = 'JambageCom\\FhDebug\\Hooks\\CoreHooks->devLog';
+        }
 
         if ($newExtConf['SYSLOG']) {
             $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['systemLog'][$_EXTKEY] = 'JambageCom\\FhDebug\\Hooks\\CoreHooks->sysLog';
         }
-	}
+    }
 
-	if ($newExtConf['OOPS_AN_ERROR_OCCURRED']) {
-		$GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Frontend\\ContentObject\\Exception\\ProductionExceptionHandler'] = array(
-			'className' => 'JambageCom\\FhDebug\\Hooks\\ProductionExceptionHandler',
-		);
+    if ($newExtConf['OOPS_AN_ERROR_OCCURRED']) {
+        $GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Frontend\\ContentObject\\Exception\\ProductionExceptionHandler'] = array(
+            'className' => 'JambageCom\\FhDebug\\Hooks\\ProductionExceptionHandler',
+        );
         $GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Core\\Error\\ProductionExceptionHandler'] = array(
             'className' => 'JambageCom\\FhDebug\\Hooks\\CoreProductionExceptionHandler',
         );
-	}
+    }
 
-	$GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['patchem']['configurationItemLabel'][$_EXTKEY] = 'JambageCom\\FhDebug\\Hooks\\PatchemHooks';
+    $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['patchem']['configurationItemLabel'][$_EXTKEY] = 'JambageCom\\FhDebug\\Hooks\\PatchemHooks';
 
     $GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\Core\\ExtDirect\\ExtDirectRouter'] = array(
         'className' => 'JambageCom\\FhDebug\\Hooks\\ExtDirectRouter'
